api gateway updated

--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -2,3 +2,9 @@ spring.application.name=API-GATEWAY
 
 server.port=7070
 
+spring.cloud.gateway.routes[0].id=USER-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path= /user/**
+spring.cloud.gateway.routes[0].metadata.cors.allowedOrigins=http://localhost:4200/
+spring.cloud.gateway.routes[0].metadata.cors.allowedHeaders=*
+spring.cloud.gateway.routes[0].metadata.cors.allowMethods=GET POST PUT DELETE
